# BoatClassifieds

./: README.md  data.json  pyproject.toml
boat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
boat/migrations/: 0001_initial.py  0002_boat_price.py  0003_boat_description_boat_image_alter_boat_name_and_more.py  0004_alter_boat_price.py  0005_boat_views_counter.py  0006_boat_created_at_boat_is_published_owner_created_at_and_more.py  0007_alter_boat_is_published.py  0008_alter_boat_is_published.py  0009_alter_boat_is_published.py  0010_alter_boat_description_alter_boat_image_and_more.py  0011_version.py  0012_remove_version_description_version_is_current_and_more.py  0013_alter_boat_options.py  0014_owner_user.py  0015_alter_owner_user.py  0016_alter_owner_user.py  0017_alter_owner_user.py  0018_remove_owner_user.py
boat/templates/boat/: base.html  boat_create.html  boat_delete.html  boat_detail.html  boat_form.html  boat_list.html  contact.html
boat/templatetags/: my_tags.py
config/: settings.py  urls.py
offer/: admin.py  models.py  urls.py  views.py
offer/migrations/: 0001_initial.py  0002_alter_offer_options_offer_created_at_and_more.py
order/: admin.py  models.py  services.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/templates/order/: order_form.html
users/: admin.py  forms.py  models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
